# t3rn

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .taplo.toml  .travis.yml  CHANGELOG-dev.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  DockerfileT3rn  LICENSE-APACHE2  Makefile.toml  README.md  Session.vim  codecov.yml  collator.Dockerfile  collator.t0rn.Dockerfile  collator.t1rn.Dockerfile  collator.t2rn.Dockerfile  collator.t3rn.Dockerfile  collator.t7rn.Dockerfile  docker-compose.yml  flake.nix  gateway_standalone.md  initial_development_phase.md  install-all.sh  package-dev.json  package.json  parachain-launch.yaml  release.toml  results.sarif  rococo-2.json  rust-toolchain.toml  rustfmt.toml  standalone.Dockerfile  zombienet-t1rn.toml  zombienet.json  zombienet.sh  (+1 more)
beefy/node/: Cargo.toml
beefy/node/src/: chain_spec.rs  command.rs  service.rs
beefy/runtime/: Cargo.toml
beefy/runtime/src/: lib.rs
circuit/: Cargo.toml  README.md  build.rs  run-benchmark.sh  run-circuit.sh
circuit/network_metadata/: kusama_metadata.json  kusama_runtime_version.json  polkadot_metadata.json  polkadot_runtime_version.json
circuit/node/: Cargo.toml
circuit/node/src/: chain_spec.rs  command.rs  main.rs  service.rs
circuit/pallets/beefy-mmr-pallet/: Cargo.toml
circuit/pallets/contracts-registry/: Cargo.toml
circuit/pallets/execution-delivery/: Cargo.toml
circuit/pallets/multi-finality-verifier/: Cargo.toml
circuit/pallets/xdns/: Cargo.toml  README.md
circuit/primitives/: Cargo.toml  README.md
circuit/primitives/src/: abi.rs  contract_metadata.rs  event_signature.rs  gateway_inbound_protocol.rs  lib.rs  match_format.rs  side_effect.rs  signature_caster.rs  transfers.rs  volatile.rs  xtx.rs
circuit/protocol/: Cargo.toml
circuit/protocol/src/: chain_generic_metadata.rs  circuit_inbound.rs  circuit_outbound.rs  eth_outbound.rs  ethereum_gateway_protocol.rs  gateway_outbound_protocol.rs  lib.rs  side_effects_protocol.rs  signer.rs  substrate_gateway_assembly.rs  substrate_gateway_protocol.rs  substrate_outbound.rs  test_utils.rs
circuit/rpc/: Cargo.toml
circuit/rpc-test/: Cargo.toml
circuit/rpc/rpc-test/: Cargo.toml
circuit/rpc/runtime-api/: Cargo.toml  README.md
circuit/rpc/src/: lib.rs
circuit/runtime/: Cargo.toml  build.rs
circuit/runtime/src/: gateway_messages.rs  lib.rs
circuit/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  service.rs
circuit/src/contracts-registry/: Cargo.toml
circuit/src/engine/: Cargo.toml  README.md  fixtures
circuit/src/execution-delivery/: Cargo.toml
circuit/src/primitives/: Cargo.toml
circuit/src/registry/: Cargo.toml  README.md
circuit/src/rpc/: Cargo.toml  README.md
circuit/src/rpc-test/: Cargo.toml
circuit/src/runtime/: Cargo.toml
circuit/src/test-utils/: Cargo.toml
circuit/src/xdns/: Cargo.toml  README.md
circuit/test-utils/: Cargo.toml
circuit/test-utils/src/: test_utils.rs
finality-verifiers/common/: Cargo.toml
finality-verifiers/common/src/: traits.rs
finality-verifiers/commons/: Cargo.toml
finality-verifiers/commons/src/: lib.rs  traits.rs  types.rs
finality-verifiers/grandpa/: Cargo.toml
finality-verifiers/grandpa/src/: lib.rs  light_clients.rs  mock.rs  side_effects.rs  types.rs  weights.rs
gateway/escrow-engine/: Cargo.toml
gateway/escrow-engine/escrow-contracts-wrapper/: Cargo.toml  LICENSE-APACHE2  README.md
gateway/node/: Cargo.toml  README.md  shell.nix
gateway/node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
gateway/pallet-escrow-gateway/: Cargo.toml
gateway/pallet-escrow-gateway/balances/: Cargo.toml
gateway/pallet-escrow-gateway/common/: Cargo.toml
gateway/pallet-escrow-gateway/contracts-gateway/: Cargo.toml  README.md
gateway/pallet-escrow-gateway/escrow-engine/: Cargo.toml
gateway/pallet-escrow-gateway/fixtures/: call_flipper_runtime-pruned.wasm  call_flipper_runtime.wasm  call_flipper_runtime.wat  compile_wat2wasm.sh  return_from_start_fn.wat  storage_runtime_calls.wasm  storage_runtime_calls.wat  storage_runtime_demo.wat  transfer_big_amount_return_code.wasm  transfer_big_amount_return_code.wat
gateway/pallet-escrow-gateway/runtime-gateway/: Cargo.toml  (+1 more)
gateway/rpc/: Cargo.toml
gateway/runtime/: Cargo.toml
node/cli/: Cargo.toml
node/parachain/: Cargo.toml  Makefile  build.rs
node/service/: Cargo.toml
node/standalone/: Cargo.toml  Makefile
node/t0rn-parachain/: Cargo.toml
node/t1rn-parachain/: Cargo.toml
primitives/: Cargo.toml
primitives/0.9.13/: .gitignore  Cargo.toml
primitives/src/: abi.rs  account_manager.rs  attesters.rs  bsc_finality_verifier.rs  circuit.rs  circuit_clock.rs  circuit_portal.rs  claimable.rs  clock.rs  common.rs  contract_metadata.rs  contracts_registry.rs  executors.rs  finality_verifier.rs  freevm.rs  gateway_inbound_protocol.rs  lib.rs  light_client.rs  match_format.rs  monetary.rs  portal.rs  protocol.rs  rewards.rs  side_effect.rs  signature_caster.rs  staking.rs  storage.rs  threevm.rs  transfers.rs  treasury.rs  volatile.rs  xdns.rs  xtx.rs
protocol/: Cargo.toml
protocol/0.9.13/: Cargo.toml
protocol/src/: circuit_inbound.rs  circuit_outbound.rs  eth_outbound.rs  gateway_inbound_assembly.rs  gateway_outbound_protocol.rs  lib.rs  merklize.rs  side_effects_insurance_protocol.rs  side_effects_protocol_cp.rs  substrate_gateway_assembly.rs  substrate_outbound.rs  test_utils.rs  volatile.rs
rpc-test/: Cargo.toml  README.md
rpc-test/jsonrpc-runtime-client/: Cargo.toml
rpc-test/src/: extrinsic_gateway_mock.rs  extrinsic_gateway_remote.rs  lib.rs  mock_rpc_setup.rs  smart_contract_deployment_remote.rs  test_utils.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs  replay.rs  test_utils.rs  tests.rs  types.rs
types/: Cargo.toml
types/abi/: Cargo.toml
types/src/: abi.rs  bid.rs  fsx.rs  gateway.rs  interface.rs  lib.rs  migrations.rs  mini_mock.rs  recode.rs  sfx.rs  sfx_abi.rs  side_effect.rs  standard.rs  standard2.rs  to_abi.rs  to_filled_abi.rs  types.rs  vendor.rs
xcm-simulator-tests/: Cargo.toml
xcm-simulator-tests/src/: lib.rs  t0rn.rs
(+4253 files in other folders)
