[profile.release]
debug       = 0 # Set this to 1 or 2 to get more useful backtraces in debugger.
incremental = true
panic       = 'unwind'

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[profile.dev.package]
# These speed up local tests.
kusama-runtime.opt-level     = 3
librocksdb-sys.opt-level     = 3
polkadot-runtime.opt-level   = 3
rococo-runtime.opt-level     = 3
rustc-hash.opt-level         = 3
tikv-jemalloc-sys.opt-level  = 3
wasmtime-cranelift.opt-level = 3
wasmtime.opt-level           = 3

[workspace.package]
authors    = [ "t3rn ltd. <team@t3rn.io>" ]
edition    = "2021"
homepage   = "https://t3rn.io"
license    = "Apache-2.0"
readme     = "README.md"
repository = "https://github.com/t3rn/t3rn"
version    = "1.4.0-rc.0"

# Dependencies are split into 2 groups: wasm and client.
# - "nostd" dependencies requires to be no_std compatible, which often requires
#   `default-features = false`. When used in a client-side crate the "std" feature should be enabled
#   there if it exists.
# - "std" dependencies are only used in the client, and thus don't need to be no_std compatible.
[workspace.dependencies]

# ====== nostd ======
bitflags         = "1.3"
bytes            = { version = "1.2.1", default-features = false }
ed25519-dalek    = { version = "1.0", features = [ "u64_backend" ], default-features = false }
evm              = { git = "https://github.com/rust-blockchain/evm", rev = "01bcbd2205a212c34451d3b4fabc962793b057d3", features = [ "with-codec" ], default-features = false }
hex              = { version = "0.4", features = [ "serde" ], default-features = false }
hex-literal      = { version = "0.4", default-features = false }
log              = { version = "0.4", default-features = false }
num              = { version = "0.4.0", default-features = false }
num-traits       = { version = "0.2", default-features = false }
primitive-types  = { version = "0.12.1", features = [ "scale-info", "rlp", "byteorder" ], default-features = false }
rand             = { version = "0.8", default-features = false }
rand_pcg         = { version = "0.3", default-features = false }
rlp              = { version = "0.5.2", features = [ "derive" ], default-features = false }
serde            = { default-features = false, version = "1.0", features = [ "derive" ] }
sha3             = { version = "0.10.1", default-features = false }
smallvec         = { version = "1.0", default-features = false, features = [ "const_generics" ] }
wasm-instrument  = { version = "0.4", default-features = false }
wasmi            = { version = "0.20", default-features = false }
wasmi-validation = { version = "0.4", default-features = false }
wasmparser       = { package = "wasmparser-nostd", version = "0.91", default-features = false }

# parity
codec              = { version = "3.0.0", package = "parity-scale-codec", features = [ "derive", "max-encoded-len" ], default-features = false }
frame-metadata     = { version = "15", features = [ "v13", "v14" ], default-features = false }
parity-scale-codec = { version = "3.0.0", package = "parity-scale-codec", features = [ "derive", "max-encoded-len" ], default-features = false }
scale-info         = { version = "2.1.1", features = [ "derive" ], default-features = false }

frame-benchmarking                         = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
frame-executive                            = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
frame-support                              = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
frame-support-procedural                   = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
frame-support-procedural-tools             = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
frame-system                               = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
frame-system-benchmarking                  = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
frame-system-rpc-runtime-api               = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
frame-try-runtime                          = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
node-primitives                            = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
pallet-asset-conversion                    = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
pallet-asset-tx-payment                    = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
pallet-assets                              = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
pallet-aura                                = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
pallet-authorship                          = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
pallet-babe                                = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
pallet-balances                            = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
pallet-contracts-proc-macro                = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
pallet-grandpa                             = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
pallet-identity                            = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
pallet-membership                          = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
pallet-preimage                            = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
pallet-randomness-collective-flip          = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false, package = "pallet-insecure-randomness-collective-flip" }
pallet-scheduler                           = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
pallet-session                             = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
pallet-sudo                                = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
pallet-timestamp                           = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
pallet-transaction-payment                 = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
pallet-treasury                            = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
pallet-utility                             = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
sp-api                                     = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
sp-application-crypto                      = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
sp-block-builder                           = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
sp-blockchain                              = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
sp-consensus-aura                          = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
sp-core                                    = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
sp-finality-grandpa                        = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
sp-inherents                               = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
sp-io                                      = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
sp-keyring                                 = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
sp-keystore                                = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
sp-offchain                                = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
sp-rpc                                     = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
sp-runtime                                 = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
sp-session                                 = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
sp-state-machine                           = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
sp-std                                     = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
sp-transaction-pool                        = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
sp-trie                                    = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
sp-version                                 = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.39', default-features = false }
sp-weights                                 = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }

# Polkadot
pallet-xcm                 = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39", default-features = false }
polkadot-parachain         = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39", default-features = false }
polkadot-runtime-common    = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39", default-features = false }
polkadot-runtime-constants = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39", default-features = false }
xcm                        = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39", default-features = false }
xcm-builder                = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39", default-features = false }
xcm-executor               = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39", default-features = false }

# Cumulus
cumulus-pallet-aura-ext             = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.39', default-features = false }
cumulus-pallet-dmp-queue            = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.39', default-features = false }
cumulus-pallet-parachain-system     = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.39', default-features = false }
cumulus-pallet-session-benchmarking = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.39', default-features = false }
cumulus-pallet-xcm                  = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.39', default-features = false }
cumulus-pallet-xcmp-queue           = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.39', default-features = false }
cumulus-primitives-core             = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.39', default-features = false }
cumulus-primitives-timestamp        = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.39', default-features = false }
cumulus-primitives-utility          = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.39', default-features = false }
pallet-collator-selection           = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.39', default-features = false }
parachain-info                      = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.39', default-features = false }
parachains-common                   = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.39', default-features = false }

# TODO: t3rn dependencies
pallet-asset-registry = { git = "https://github.com/t3rn/xbi", version = "0.3.0", default-features = false, branch = "chore/upgrades" }
pallet-xbi-portal     = { git = "https://github.com/t3rn/xbi", version = "0.3.0", default-features = false, branch = "chore/upgrades" }
substrate-abi         = { git = "https://github.com/t3rn/xbi", version = "0.3.0", default-features = false, branch = "chore/upgrades" }
xp-channel            = { git = "https://github.com/t3rn/xbi", version = "0.3.0", default-features = false, branch = "chore/upgrades" }
xp-format             = { git = "https://github.com/t3rn/xbi", version = "0.3.0", default-features = false, branch = "chore/upgrades" }
xp-xcm                = { git = "https://github.com/t3rn/xbi", version = "0.3.0", default-features = false, branch = "chore/upgrades" }
xs-channel            = { git = "https://github.com/t3rn/xbi", version = "0.3.0", default-features = false, branch = "chore/upgrades" }

# ====== std ======
frame-benchmarking-cli         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-basic-authorship            = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-chain-spec                  = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-cli                         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-client-api                  = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-consensus                   = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-consensus-aura              = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-executor                    = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-finality-grandpa            = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-keystore                    = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-network                     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-rpc                         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-rpc-api                     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-service                     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-sysinfo                     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-telemetry                   = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-tracing                     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-transaction-pool            = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-transaction-pool-api        = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
substrate-frame-rpc-system     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
substrate-prometheus-endpoint  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
substrate-wasm-builder         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
try-runtime-cli                = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }

polkadot-cli        = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }
polkadot-service    = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }

[workspace]
exclude = [  ]
# Substrate don't use glob in their workspace, so we don't either.
# https://github.com/paritytech/substrate/blob/master/Cargo.toml
# It breaks dependabot.
# Example: https://github.com/t3rn/t3rn/network/updates/651720180
# updater | 2023/04/25 09:27:23 ERROR <job_651720180> error: failed to load manifest for workspace member `/home/dependabot/dependabot-updater/dependabot_tmp_dir/pallets/contracts-registry/rpc`
members = [
  "finality-verifiers/common",
  "finality-verifiers/grandpa",
  "node/standalone",
  "node/t0rn-parachain",
  "node/t3rn-parachain",
  "pallets/3vm",
  "pallets/account-manager",
  "pallets/circuit",
  "pallets/clock",
  "pallets/contracts",
  "pallets/contracts-parity",
  "pallets/contracts-registry",
  "pallets/contracts-registry/rpc",
  "pallets/contracts-registry/rpc/runtime-api",
  "pallets/contracts/rpc",
  "pallets/contracts/rpc/runtime-api",
  "pallets/evm",
  "pallets/evm/precompile/3vm-dispatch",
  "pallets/evm/precompile/util",
  "pallets/evm/rpc",
  "pallets/evm/rpc/runtime-api",
  "pallets/executors",
  "pallets/portal",
  "pallets/portal/rpc",
  "pallets/portal/rpc/runtime-api",
  "pallets/xdns",
  "pallets/xdns/rpc",
  "pallets/xdns/rpc/runtime-api",
  "primitives",
  "runtime/common-pallets",
  "runtime/common-types",
  "runtime/mock",
  "runtime/standalone",
  "runtime/t0rn-parachain",
  "runtime/t3rn-parachain",
  "types",
  "types/abi",
]

#[patch."https://github.com/paritytech/cumulus"]
#fp-evm                      = { path = "./pallets/evm/primitives" }

[patch."https://github.com/t3rn/xbi"]
pallet-asset-registry = { path = "../xbi/pallets/asset-registry" }
pallet-xbi-portal     = { path = "../xbi/pallets/portal" }
substrate-abi         = { path = "../xbi/crates/sabi" }
xp-channel            = { path = "../xbi/crates/channel-primitives" }
xp-format             = { path = "../xbi/crates/format" }
xp-xcm                = { path = "../xbi/crates/xcm-primitives" }
xs-channel            = { path = "../xbi/crates/channel" }

[patch."https://github.com/t3rn/t3rn"]
fp-evm                      = { path = "./pallets/evm/primitives" }
pallet-contracts-primitives = { path = "./pallets/contracts/primitives" }
t3rn-primitives             = { path = "./primitives" }
